additional validations for user and start profile page

--- a/reminders/templates/reminders/home.html
+++ b/reminders/templates/reminders/home.html
@@ -8,7 +8,12 @@
     </li>
 </ul>
 {% else %}
-show reminders
-add reminder
+<div>
+    existing reminders
+</div>
+<div>
+    add reminder
+</div>
 <a href="{% url 'users:logout' %}">logout</a>
+<a href="{% url 'users:profile' %}">profil</a>
 {% endif %}
