--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -20,4 +20,5 @@
     <a href="{% url 'users:register' %}">Lost password?</a>
     <a href="{% url 'users:password_change' %}">Change password</a>
     <a href="{% url 'users:password_reset' %}">Password Reset</a>
+    <a href="{% url 'users:register' %}">Vrei cont?</a>
 </p>
