--- a/reminders/templates/reminders/home.html
+++ b/reminders/templates/reminders/home.html
@@ -1,19 +1,29 @@
-{% if not request.user.is_authenticated %}
-<ul>
-    <li>
-        <a href="{% url 'users:login' %}">Login</a>
-    </li>
-    <li>
-        <a href="{% url 'users:register' %}">Register</a>
-    </li>
-</ul>
-{% else %}
-<div>
-    <a href="{% url 'reminders:reminders_list' %}">show reminders</a>
+{% extends 'reminders/base.html' %}
+{% block title %}
+{{title}}
+{% endblock title %}
+{% block content %}
+<div id="home-page">
+    {% if not request.user.is_authenticated %}
+    <a class="home-link" href="{% url 'users:login' %}">
+        <div>Autentificare</div>
+    </a>
+    <a class="home-link" href="{% url 'users:register' %}">
+        <div>Înregistrare</div>
+    </a>
+    {% else %}
+    <button class="home-link">
+        <a href="{% url 'reminders:reminders_list' %}">show reminders</a>
+    </button>
+    <button class="home-link">
+        <a href="{% url 'reminders:add_reminder' %}">add reminder</a>
+    </button>
+    <button class="home-link">
+        <a href="{% url 'users:logout' %}">logout</a>
+    </button>
+    <button class="home-link">
+        <a href="{% url 'users:profile' %}">profil</a>
+    </button>
+    {% endif %}
 </div>
-<div>
-    <a href="{% url 'reminders:add_reminder' %}">add reminder</a>
-</div>
-<a href="{% url 'users:logout' %}">logout</a>
-<a href="{% url 'users:profile' %}">profil</a>
-{% endif %}
+{% endblock content %}
