--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,24 +1,28 @@
-{% if form.errors %}
-<p>Numele de utilizator sau parola nu sunt corecte. Te rugăm reîncearcă.</p>
-{% endif %}
-<form action="{% url 'users:login' %}" method="post">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-    </table>
-    <input type="submit" value="Login">
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
-<p>
-    <a href="{% url 'users:register' %}">Lost password?</a>
-    <a href="{% url 'users:password_change' %}">Change password</a>
-    <a href="{% url 'users:password_reset' %}">Password Reset</a>
-    <a href="{% url 'users:register' %}">Vrei cont?</a>
-</p>
+{% extends 'reminders/base.html' %}
+{% block title %}
+{{title}}
+{% endblock title %}
+{% block content %}
+<div class="login-page">
+    {% if form.errors %}
+    <p id="login-error">Numele de utilizator sau parola nu sunt corecte. Te rugăm reîncearcă.</p>
+    {% endif %}
+    <form action="{% url 'users:login' %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+        </div>
+        <div class="form-group">
+            {{ form.password.label_tag }}
+            {{ form.password }}
+        </div>
+        <input type="submit" value="Login" id="login">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+    <p>
+        <a href="{% url 'users:register' %}">Vrei cont?</a>
+        <a href="{% url 'users:password_reset' %}">Ai uitat parola?</a>
+    </p>
+</div>
+{% endblock content %}
