--- a/reminders/templates/reminders/base.html
+++ b/reminders/templates/reminders/base.html
@@ -16,6 +16,15 @@
 
 <body>
     <div id="container">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li class="message-{{ message.tags }}">
+                {{ message }}
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         {% block content %}
         {% endblock content %}
     </div>
