--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -1,3 +1,4 @@
+{% extends 'reminders/base.html' %}
 {% block content %}
-<p>{% translate 'Your password was changed.' %}</p>
-{% endblock %}
+<p class="messages">Parola a fost schimbată cu succes.</p>
+{% endblock content %}
