--- a/users/templates/users/password_change_form.html
+++ b/users/templates/users/password_change_form.html
@@ -1,52 +1,20 @@
-<div id="content-main">
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            {% if form.errors %}
-            <p class="errornote">
-                {% if form.errors.items|length == 1 %}
-                Please correct the error below.
-                {% else %}
-                Please correct the errors below.
-                {% endif %}
-            </p>
-            {% endif %}
+{% extends 'reminders/base.html' %}
+{% block content %}
+{% if form.errors %}
+<p class="submit-field-error">Corectați erorile de mai jos pentru a vă putea înregistra.</p>
+{% endif %}
+<form method="post">
+    {% csrf_token %}
+    {% for field in form %}
+    <div class="form-group">
+        {{ field.label_tag }}
+        {{ field }}
+        {% for error in field.errors %}
+        <p class="field-error">{{ error }}</p>
+        {% endfor %}
 
-
-            <p>
-                Please enter your old password, for security’s sake, and then enter your new password twice
-                so we can verify you typed it in correctly.
-            </p>
-
-            <fieldset class="module aligned wide">
-
-                <div class="form-row">
-                    {{ form.old_password.errors }}
-                    {{ form.old_password.label_tag }} {{ form.old_password }}
-                </div>
-
-                <div class="form-row">
-                    {{ form.new_password1.errors }}
-                    {{ form.new_password1.label_tag }} {{ form.new_password1 }}
-                    {% if form.new_password1.help_text %}
-                    <div class="help">{{ form.new_password1.help_text|safe }}</div>
-                    {% endif %}
-                </div>
-
-                <div class="form-row">
-                    {{ form.new_password2.errors }}
-                    {{ form.new_password2.label_tag }} {{ form.new_password2 }}
-                    {% if form.new_password2.help_text %}
-                    <div class="help">{{ form.new_password2.help_text|safe }}</div>
-                    {% endif %}
-                </div>
-
-            </fieldset>
-
-            <div class="submit-row">
-                <input type="submit" value="Change my password" class="default">
-            </div>
-
-        </div>
-    </form>
-</div>
+    </div>
+    {% endfor %}
+    <input type="submit" value="Schimbă parola" class="submit-btn">
+</form>
+{% endblock content %}
