--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,23 +1,13 @@
-{% extends "admin/base_site.html" %}
-{% load i18n %}
-
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">Home</a>
-    &rsaquo; Password reset
-</div>
-{% endblock %}
-
+{% extends 'reminders/base.html' %}
 {% block content %}
 
-<p>
-    We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You
-    should receive them shortly.
+<p class="messages">
+    Am trimis pe email instrucțiunile pentru resetarea parolei, dacă există un cont asociat acestei adrese le vei primi
+    în scurt timp.
 </p>
 
-<p>
-    If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam
-    folder.
+<p class="messages">
+    Dacă nu primeși email-ul, verifică dacă ai introdus adresa corectă.
 </p>
 
-{% endblock %}
+{% endblock content %}
