--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -1,28 +1,18 @@
-{% extends "admin/base_site.html" %}
-{% load i18n static %}
-
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" type="text/css" href="{% static " admin/css/forms.css" %}">{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}"> Home</a>
-    &rsaquo; Password reset
-</div>
-{% endblock %}
-
+{% extends 'reminders/base.html' %}
 {% block content %}
 
-<p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
+<p class="messages">Introdu adresa ta de email. Dacă există un cont asociat acestei adrese vei primi pe email
+    instrucțiunile pentru
+    resetarea parolei.</p>
 
-<form method="post">{% csrf_token %}
-    <fieldset class="module aligned">
-        <div class="form-row field-email">
-            {{ form.email.errors }}
-            <label for="id_email">Email address:</label>
-            {{ form.email }}
-        </div>
-        <input type="submit" value="Reset my password">
-    </fieldset>
+<form method="post">
+    {% csrf_token %}
+    <div class="form-group">
+        {{ form.email.errors }}
+        <label for="id_email">Email address:</label>
+        {{ form.email }}
+    </div>
+    <input type="submit" value="Trimite" class="submit-btn">
 </form>
 
-{% endblock %}
+{% endblock content %}
