--- a/users/templates/users/password_change_done.html
+++ b/users/templates/users/password_change_done.html
@@ -1,4 +1,5 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
+{% include "reminders/base_messages.html" %}
 <p class="messages">Parola a fost schimbată cu succes.</p>
 {% endblock content %}
