--- a/users/templates/users/password_change_form.html
+++ b/users/templates/users/password_change_form.html
@@ -1,5 +1,6 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
+{% include "reminders/base_messages.html" %}
 {% if form.errors %}
 <p class="submit-field-error">Corectați erorile de mai jos pentru a vă putea înregistra.</p>
 {% endif %}
