--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,13 +1,15 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
+<div class="auth-page">
+    {% include "reminders/base_messages.html" %}
+    <p class="messages">
+        Am trimis pe email instrucțiunile pentru resetarea parolei, dacă există un cont asociat acestei adrese le vei
+        primi
+        în scurt timp.
+    </p>
 
-<p class="messages">
-    Am trimis pe email instrucțiunile pentru resetarea parolei, dacă există un cont asociat acestei adrese le vei primi
-    în scurt timp.
-</p>
-
-<p class="messages">
-    Dacă nu primeși email-ul, verifică dacă ai introdus adresa corectă.
-</p>
-
+    <p class="messages">
+        Dacă nu primeși email-ul, verifică dacă ai introdus adresa corectă.
+    </p>
+</div>
 {% endblock content %}
