--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,23 +1,26 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
-{% if form.errors %}
-<p class="submit-field-error">Credențialele nu sunt corecte. Te rugăm, reîncearcă.</p>
-{% endif %}
-<form action="{% url 'users:login' %}" method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.username.label_tag }}
-        {{ form.username }}
+<div class="auth-page">
+    {% include "reminders/base_messages.html" %}
+    {% if form.errors %}
+    <p class="submit-field-error">Credențialele nu sunt corecte. Te rugăm, reîncearcă.</p>
+    {% endif %}
+    <form action="{% url 'users:login' %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+        </div>
+        <div class="form-group">
+            {{ form.password.label_tag }}
+            {{ form.password }}
+        </div>
+        <input type="submit" value="Login" class="submit-btn">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+    <div class="under-form-links">
+        <a href="{% url 'users:register' %}">Vrei cont?</a>
+        <a href="{% url 'users:password_reset' %}">Ai uitat parola?</a>
     </div>
-    <div class="form-group">
-        {{ form.password.label_tag }}
-        {{ form.password }}
-    </div>
-    <input type="submit" value="Login" class="submit-btn">
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
-<div class="under-form-links">
-    <a href="{% url 'users:register' %}">Vrei cont?</a>
-    <a href="{% url 'users:password_reset' %}">Ai uitat parola?</a>
 </div>
 {% endblock content %}
