--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,35 +1,27 @@
+{% extends 'reminders/base.html' %}
 {% block content %}
+<div class="auth-page">
+    {% include "reminders/base_messages.html" %}
+    {% if validlink %}
+    <p class="messages">Introdu noua parolă.</p>
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+            {% for error in field.errors %}
+            <p class="field-error">{{ error }}</p>
+            {% endfor %}
 
-{% if validlink %}
-
-<p>
-    Please enter your new password twice so we can verify you typed it in correctly.
-</p>
-
-<form method="post">
-    {% csrf_token %}
-    <fieldset class="module aligned">
-        <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
-        <div class="form-row field-password1">
-            {{ form.new_password1.errors }}
-            <label for="id_new_password1">New password:</label>
-            {{ form.new_password1 }}
         </div>
-        <div class="form-row field-password2">
-            {{ form.new_password2.errors }}
-            <label for="id_new_password2">Confirm password:</label>
-            {{ form.new_password2 }}
-        </div>
-        <input type="submit" value="Change my password">
-    </fieldset>
-</form>
+        {% endfor %}
+        <input type="submit" value="Schimbă parola" class="submit-btn">
+    </form>
 
-{% else %}
+    {% else %}
 
-<p>The password reset link was invalid, possibly because it has already been used. Please request a new
-    password reset.
-</p>
-
-{% endif %}
-
+    <p class="messages">Linkul de resetare a parolei nu este valid.</p>
+    {% endif %}
+</div>
 {% endblock %}
