--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -1,18 +1,19 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
+<div class="auth-page">
+    {% include "reminders/base_messages.html" %}
+    <p class="messages">Introdu adresa ta de email. Dacă există un cont asociat acestei adrese vei primi pe email
+        instrucțiunile pentru
+        resetarea parolei.</p>
 
-<p class="messages">Introdu adresa ta de email. Dacă există un cont asociat acestei adrese vei primi pe email
-    instrucțiunile pentru
-    resetarea parolei.</p>
-
-<form method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.email.errors }}
-        <label for="id_email">Email address:</label>
-        {{ form.email }}
-    </div>
-    <input type="submit" value="Trimite" class="submit-btn">
-</form>
-
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form.email.errors }}
+            <label for="id_email">Email address:</label>
+            {{ form.email }}
+        </div>
+        <input type="submit" value="Trimite" class="submit-btn">
+    </form>
+</div>
 {% endblock content %}
