--- a/users/templates/users/register_user.html
+++ b/users/templates/users/register_user.html
@@ -1,23 +1,26 @@
 {% extends 'reminders/base.html' %}
 {% block content %}
-{% if form.errors %}
-<p class="submit-field-error">Corectați erorile de mai jos pentru a vă putea înregistra.</p>
-{% endif %}
-<form action="{% url 'users:register' %}" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-    <div class="form-group">
-        {{ field.label_tag }}
-        {{ field }}
-        {% for error in field.errors %}
-        <p class="field-error">{{ error }}</p>
-        {% endfor %}
+<div class="auth-page">
+    {% include "reminders/base_messages.html" %}
+    {% if form.errors %}
+    <p class="submit-field-error">Corectați erorile de mai jos pentru a vă putea înregistra.</p>
+    {% endif %}
+    <form action="{% url 'users:register' %}" method="post">
+        {% csrf_token %}
+        {% for field in form %}
+        <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+            {% for error in field.errors %}
+            <p class="field-error">{{ error }}</p>
+            {% endfor %}
 
+        </div>
+        {% endfor %}
+        <button type="submit" class="submit-btn">Submit</button>
+    </form>
+    <div class="under-form-links">
+        <a href="{% url 'users:login' %}">Ai deja cont?</a>
     </div>
-    {% endfor %}
-    <button type="submit" class="submit-btn">Submit</button>
-</form>
-<div class="under-form-links">
-    <a href="{% url 'users:login' %}">Ai deja cont?</a>
 </div>
 {% endblock %}
