--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -18,9 +18,9 @@
         </div>
         {% endfor %}
         <button type="submit" class="submit-btn">Schimbă</button>
+        <button id="logout-btn"><a href="{% url 'users:logout' %}">Logout</a></button>
     </form>
     <div class="under-form-links">
-        <a href="{% url 'reminders:home' %}">Home</a>
         <a href="{% url 'users:password_change' %}">Schimbă parola</a>
     </div>
 </div>
